<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>python_orocos_kdl</name>
  <version>1.5.1</version>
  <description>
    This package contains the python bindings PyKDL for the Kinematics and Dynamics
    Library (KDL), distributed by the Orocos Project.
  </description>
  <maintainer email="ruben.smits@intermodalics.eu">Ruben Smits</maintainer>
  <maintainer email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</maintainer>
  <url>http://wiki.ros.org/python_orocos_kdl</url>
  <license>LGPL-2.1-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>orocos_kdl</build_depend>

  <depend>python3</depend>

  <exec_depend>orocos_kdl</exec_depend>

  <test_depend>python3-future</test_depend>
  <test_depend>python3-psutil</test_depend>

  <doc_depend>python3-sphinx</doc_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rosdoc config="rosdoc.yaml"/>
  </export>

</package>
